added social links

--- a/css/style.css
+++ b/css/style.css
@@ -229,16 +229,16 @@ p {
   transition: 1s;
 }
 .aboutme .socialLinks .pic1:hover {
-  content: url("/images/colorimg/linkedin.png");
+  content: url("images/colorimg/linkedin.png");
 }
 .aboutme .socialLinks .pic2:hover {
-  content: url("/images/github.png");
+  content: url("images/github.png");
 }
 .aboutme .socialLinks .pic3:hover {
-  content: url("/images/colorimg/instagram.png");
+  content: url("images/colorimg/instagram.png");
 }
 .aboutme .socialLinks .pic4:hover {
-  content: url("/images/colorimg/facebook.png");
+  content: url("images/colorimg/facebook.png");
 }
 /* ------------------ */
 .footer {
