add hamberger button here

--- a/css/media.css
+++ b/css/media.css
@@ -286,6 +286,14 @@
   }
 
   /* till this  */
+
+  #see {
+    display: block;
+  }
+
+  #list {
+    display: none;
+  }
 }
 @media screen and (max-width: 330px) {
   #contacts {
