--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,26 @@ a {
   padding: 0 20px;
   transition: all 1s ease;
   color: black;
-  border-right: 1px solid black;
+  /* border-right: 1px solid black; */
+  position: relative;
 }
+
+.right a:not(:last-child)::after {
+  position: absolute;
+  content: "";
+  height: 2px;
+  width: 0;
+  background-color: black;
+  left: 0;
+  bottom: -10px;
+  transition: all 0.3s;
+  opacity: 0.5;
+}
+
+.right a:hover::after {
+  width: 100%;
+}
+
 .right a:last-child {
   border: none;
 }
@@ -131,14 +149,23 @@ a {
 /* .content p{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 } */
-
+.content .img{
+  height: 400px;
+  overflow: hidden;
+  /* border: 2px solid black; */
+  border-radius: 100%;
+}
 .content img {
   height: 450px;
   max-width: 100%;
   /* border: 2px solid black; */
   border-radius: 100%;
   background-color: #1db655;
+  transition: all .5s;
   /* border-radius: 42% 58% 56% 44% / 17% 34% 66% 83%; */
+}
+.content img:hover{
+  transform: scale(1.1);
 }
 .content a h2:hover {
   background-color: rgb(65, 232, 126);
