--- a/css/style.css
+++ b/css/style.css
@@ -149,8 +149,8 @@ a {
 /* .content p{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 } */
-.content .img{
-  height: 400px;
+.content .img {
+  height: 450px;
   overflow: hidden;
   /* border: 2px solid black; */
   border-radius: 100%;
@@ -161,10 +161,10 @@ a {
   /* border: 2px solid black; */
   border-radius: 100%;
   background-color: #1db655;
-  transition: all .5s;
+  transition: all 0.5s;
   /* border-radius: 42% 58% 56% 44% / 17% 34% 66% 83%; */
 }
-.content img:hover{
+.content img:hover {
   transform: scale(1.1);
 }
 .content a h2:hover {
